name:           mapbox-filter
version:        0.1.0.0
description:    Tools for working with vector Mapbox mbtiles files
homepage:       https://github.com/ondrap/mapbox-filter
bug-reports:    https://github.com/ondrap/mapbox-filter/issues
author:         Ondrej Palkovsky
maintainer:     palkovsky.ondrej@gmail.com
copyright:      2018 Ondrej Palkovsky
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/ondrap/mapbox-filter

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , vectortiles >= 1.4.0
    , bytestring
    , unordered-containers
    , aeson
    , scientific
    , text
    , vector
    , transformers
    , lens
    , string-conversions
    , zlib
    , recursion-schemes
  exposed-modules:
      Mapbox.Expression
      Mapbox.Style
      Mapbox.Interpret
      Mapbox.Filters
      Mapbox.UntypedExpression
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

executable mapbox-filter
  main-is: Main.hs
  other-modules: DbAccess
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mapbox-filter
    , string-conversions
    , unordered-containers
    , aeson
    , vectortiles >= 1.4.0
    , text
    , lens
    , bytestring
    , vector
    , sqlite-simple
    , zlib
    , optparse-applicative
    , parallel-io
    , transformers
    , unix
    , scotty
    , safe-exceptions
    , amazonka
    , amazonka-s3
    , ekg-core
    , async
    , http-client
    , http-client-tls
    , filepath
    , directory
    , resource-pool
    , mtl
    , unliftio
  default-language: Haskell2010
