cabal-version:       3.6
name:           mapbox-filter
version:        0.1.0.0
description:    Tools for working with vector Mapbox mbtiles files
homepage:       https://github.com/ondrap/mapbox-filter
bug-reports:    https://github.com/ondrap/mapbox-filter/issues
author:         Ondrej Palkovsky
maintainer:     palkovsky.ondrej@gmail.com
copyright:      2018 Ondrej Palkovsky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/ondrap/mapbox-filter


common deps
  build-depends:
      base >=4.7 && <5
    , aeson >= 2.1
    , scientific
    , recursion-schemes
    , text-icu >= 0.8.0.4
    , data-fix
    , string-conversions
    , unordered-containers
    , vectortiles >= 1.4.0
    , text
    , lens
    , bytestring
    , vector
    , sqlite-simple
    , zlib
    , optparse-applicative
    , parallel-io
    , transformers
    , unix
    , scotty
    , safe-exceptions
    , amazonka >= 2.0
    , amazonka-s3
    , ekg-core
    , async
    , http-client
    , http-client-tls
    , filepath
    , directory
    , resource-pool
    , mtl
    , unliftio
    , cryptohash-md5
    , BoundedChan
    , aeson-pretty
    , lens-aeson
    , newtype


library
  import: deps
  hs-source-dirs:
      src
  exposed-modules:
      Mapbox.Expression
      Mapbox.Style
      Mapbox.Interpret
      Mapbox.Filters
      Mapbox.UntypedExpression
      Mapbox.OldStyleConvert
      Mapbox.DownCopy
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

executable mapbox-filter
  import: deps
  main-is: Main.hs
  other-modules: DbAccess, Md5Worker, Types
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      mapbox-filter
  default-language: Haskell2010
